# PracticeGame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  dump.rdb  generate_docs.sh  jenkins.sh  run.sh
docs/: CMakeLists.txt  Doxyfile.in
docs/design/uml/: callback.plantuml  overview.plantuml  player.plantuml
resources/lua/: init.lua  player.lua  test_script.lua
resources/lua/attributes/: dexterity.lua  intelligence.lua  primary_attributes.lua  strength.lua  vitality.lua
resources/lua/classes/: character_class_list.lua  mage.lua  rogue.lua  warrior.lua
resources/lua/monsters/: enemy.lua  skeleton.lua
resources/lua/skills/: attack.lua
resources/lua/utilities/: inheritance.lua
resources/lua/weapons/: bow.lua  club.lua
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/attributes/: CMakeLists.txt  attribute_list.cpp  damage.cpp  strength.cpp
src/attributes/include/: attribute_list.h  attribute_types.h  base_attribute.h  damage.h  strength.h
src/attributes/test/: CMakeLists.txt  attribute_list_test.cpp  damage_test.cpp
src/entity/: CMakeLists.txt  beast.cpp  character.cpp  character_manager.cpp  player.cpp  player_manager.cpp  unit.cpp  unit_manager.cpp
src/entity/include/: beast.h  character.h  character_manager.h  player.h  player_manager.h  unit.h  unit_manager.h
src/entity/test/: CMakeLists.txt  character_manager_test.cpp  main.cpp  player_manager_test.cpp  player_test.cpp  unit_manager_test.cpp
src/items/: CMakeLists.txt  armor.cpp  item.cpp  weapon.cpp
src/items/include/: armor.h  item.h  weapon.h
src/movement/: CMakeLists.txt  position.cpp
src/movement/include/: position.h
src/practice/sol2/: CMakeLists.txt  attack.lua  character_class_list.lua  dexterity.lua  intelligence.lua  mage.lua  main.cpp  player.lua  primary_attribute.lua  primary_attributes.lua  rogue.lua  strength.lua  test_script.lua  vitality.lua  warrior.lua
src/practice/termox/: CMakeLists.txt  main.cpp
src/practice/toml11/: CMakeLists.txt  main.cpp  test.toml
src/utilities/: CMakeLists.txt
src/utilities/include/: uuid_generator.h
src/utilities/lua_wrapper/: CMakeLists.txt  lua_wrapper.cpp
src/utilities/lua_wrapper/include/: lua_wrapper.h
src/utilities/lua_wrapper/test/: CMakeLists.txt  lua_wrapper_test.cpp
src/utilities/path/: CMakeLists.txt  path.cpp
src/utilities/path/include/: path.h
src/utilities/path/test/: CMakeLists.txt  path_test.cpp
src/utilities/storage/: CMakeLists.txt  redis_adapter.cpp
src/utilities/storage/include/: redis_adapter.h  storage_interface.h
src/utilities/storage/test/: CMakeLists.txt  redis_adapter_test.cpp  storage_interface_test.cpp
test/: CMakeLists.txt  Unit_test.cpp  item_test.cpp  main.cpp  weapon_test.cpp
